<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/colorOrange"
    tools:context="bakhtiar.ppb.praktikumppb.MainActivity">

    <TextView
        android:id="@+id/editNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25dp"

        />

    <TextView
        android:id="@+id/editNIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textColor="@color/colorGreen"
        android:textSize="15dp"
        />
    <Button
        android:id="@+id/garis"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreen"
        />

    <TextView
        android:id="@+id/editlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/listModulPraktikum"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="@color/colorGreen"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnmodul1"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul1"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"

                    />

                <Button
                    android:id="@+id/btnmodul2"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Modul 2 : Aplikasi Android dengan Menggunakan Komponen Antarmuka, Huruf, dan Warna"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"
                    />


                <Button
                    android:id="@+id/btnmodul3"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Modul 3 : Aplikasi Android dengan Layout dan Pendengar Event"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"
                    />

                <Button
                    android:id="@+id/btnmodul4"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "Modul 4 : Aplikasi Android dengan ListView"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"
                    />

                <Button
                    android:id="@+id/btnmodul5"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul5"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"
                    />

                <Button
                    android:id="@+id/btnmodul6"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul6"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"
                    />


                <Button
                    android:id="@+id/btnmodul7"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul7"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"
                    />

                <Button
                    android:id="@+id/btnmodul8"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul8"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGreen"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>

